--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,8 @@
       <div id='moment-date'>JAN 2</div>
       <div id='moment-year'>2018</div>
       <form id='submit-form'>
-        <input id="newInput" type="text" placeholder="Add a to do"/>
+        <input id="newInput" type="text" placeholder=""/>
       </form>
-      <hr />
       <div id="content"></div>
       <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
