fixed typo on server listen

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
         <input id="newInput" type="text" placeholder=""/>
       </form>
       <div id="content"></div>
+      <script src="moment.js"></script>
+      <!-- <script>
+          moment().format();
+      </script> -->
       <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
