--- a/public/index.html
+++ b/public/index.html
@@ -25,17 +25,14 @@
 
   <body>
     <main>
-      <div id='moment-day'>MON</div>
-      <div id='moment-date'>JAN 2</div>
-      <div id='moment-year'>2018</div>
+      <div id='moment-day'></div>
+      <div id='moment-date'></div>
+      <div id='moment-year'></div>
       <form id='submit-form'>
         <input id="newInput" type="text" placeholder=""/>
       </form>
       <div id="content"></div>
-      <script src="moment.js"></script>
-      <!-- <script>
-          moment().format();
-      </script> -->
+      <script src="js/moment.js"></script>
       <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
